--- a/metodika_prepodavania.html
+++ b/metodika_prepodavania.html
@@ -413,18 +413,18 @@
 				</p>
 				<p class="zgt">
 					- <em>индивидуальные занятия</em>, продолжительность 3 (135 минут) академических часа,
-					стоимость от 13 до 15 долларов США по курсу продажи в коммерческих банках РБ
-					за один академический час (40-45 долларов за занятие).
+					стоимость от 16,5 до 17,5 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (50-52,5 долларов за занятие).
 				</p>
 				<p class="zgt">
 					- <em>занятия в паре</em>, продолжительность 3 (135 минут) академических часа,
-					стоимость от 11,5 до 12,5 долларов США по курсу продажи в коммерческих банках РБ
-					за один академический час (35-37,5 долларов за занятие) 
+					стоимость 15 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (45 долларов за занятие) 
 				</p>
 				<p class="zgt">
 					- <em>занятия в мини-группах</em>, продолжительность 3 (135 минут) академических часа,
-					стоимость 10 долларов США по курсу продажи в коммерческих банках РБ за один
-					академический час (30 долларов за занятие). В группе от 3 до 7 человек  
+					стоимость 10,5 - 12,5 долларов США по курсу продажи в коммерческих банках РБ за один
+					академический час (32,5 - 37,5 долларов за занятие). В группе от 3 до 7 человек  
 				</p>
 				<p class="zgt">
 					Стабильно отличные и хорошие результаты достигаются при любом виде занятий,
