--- a/podgotovka_k_ekzamenu.html
+++ b/podgotovka_k_ekzamenu.html
@@ -344,19 +344,19 @@
 					2. Предложение:
 				</p>
 				<p class="zgt">
-					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 20 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
-					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
-					- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
+					- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-4 человека.
 				</p>
 				<p class="zgt">
 					- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
 				</p>
 				<p class="zgt">
-					- для студентов математичкских факультетов и специальностей (включая прикладные) цену следует уточнить.
+					- для студентов математических факультетов и специальностей (включая прикладные), а также студентов зарубежных вузов цена увеличивается на 2,5 доллара США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
 					- для тех, кому требуется экстренная помощь (несколько занятий), нужно смотреть раздел «Консультации».
