--- a/pomosch_reshenii_zadach.html
+++ b/pomosch_reshenii_zadach.html
@@ -339,19 +339,19 @@
 					2. Предложение:
 				</p>
 				<p class="zgt">
-					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 22,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
-					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 20 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
-					- занятия в минигруппах, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
+					- занятия в минигруппах, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часа, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-4 человека.
 				</p>
 				<p class="zgt">
 					3. Иногда требуется помочь студенту дистанционно (например, оказать помощь в решении нескольких задач по мобильному телефону).
 				</p>
 				<p class="zgt">
-					- стоимость данной услуги от 30 долларов США по курсу продажи в коммерческих банках Республики Беларусь. При большом объеме стоимость может возрасти. Правильность и быстрота гарантирована. 100 % предоплата.
+					- стоимость данной услуги от 45 долларов США по курсу продажи в коммерческих банках Республики Беларусь. При большом объеме стоимость может возрасти. Правильность и быстрота гарантирована. 100 % предоплата.
 				</p>
 				<p class="zgt">
 					4. Записаться на занятия можно по телефонам:<br>
