--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -278,18 +278,18 @@
 					<li>Репетитор по белорусскому языку 10-11 класс, Минск</li>
 						<ul>
 							<li>
-								Стоимость индивидуальных занятий - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час. 
+								Стоимость индивидуальных занятий - 17,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. 
 								Продолжительность занятия - 2 академических часа (90 минут). 
+								Стоимость занятия в этом случае составит 35 условных единиц.
+							</li>
+							<li>
+								Стоимость занятий в паре – 155 долларов по курсу продажи в коммерческих банках РБ за один академический час. 
+								Продолжительность - 2 академических часа (90 минут). 
 								Стоимость занятия в этом случае составит 30 условных единиц.
 							</li>
 							<li>
-								Стоимость занятий в паре – 12,5 долларов по курсу продажи в коммерческих банках РБ за один академический час. 
-								Продолжительность - 2 академических часа (90 минут). 
-								Стоимость занятия в этом случае составит 25 условных единиц.
-							</li>
-							<li>
 								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
-								то ему предоставляется скидка в размере 5 долларов за каждое занятие по русскому языку.
+								то ему предоставляется <em>скидка в размере 5 долларов за каждое занятие по русскому языку</em>.
 							</li>
 						</ul>
 
@@ -297,14 +297,14 @@
 					<li>Подготовка к ЦТ по русскому языку, Минск</li>
 						<ul>
 							<li>
-								Стоимость индивидуальных занятий - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
+								Стоимость индивидуальных занятий - от 16 до 17 долларов США по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
 								Продолжительность занятия - 2 астрономических часа (120 минут). 
-								Стоимость занятия в этом случае составит 40 условных единиц.
+								Стоимость занятия в этом случае составит 45 условных единиц.
 							</li>
 							<li>
-								Стоимость занятий в паре – 13 долларов по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
+								Стоимость занятий в паре – 15 долларов по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
 								Продолжительность - 2 астрономических часа (120 минут). 
-								Стоимость занятия в этом случае составит 35 условных единиц.
+								Стоимость занятия в этом случае составит 40 условных единиц.
 							</li>
 							<li>
 								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
