--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -356,7 +356,7 @@
             </div>
 
             <h2 class="main"> 
-                <span class="h21">Централизованное тестирование (ЦТ) и централизованный экзамен(ЦЭ):</span>
+                <span class="h21">Репетитор по математике для школьников:</span>
             </h2>
 
 
@@ -442,28 +442,30 @@
                 </div>
 
                 <div id="b3" class="b3">
-                    <p class="zgt"><strong>Условия:</strong></p>
+                    <p class="zgt"><strong>Условия и цены:</strong></p>
                     <ul>
                         <li>
-                            подготовка по математике для поступления в лицеи
-                        </li>
-                        <li>
                             <em>индивидуальные занятия</em>, продолжительность 2 (90 минут)
-                            академических часа, стоимость 15 долларов США по курсу продажи в
+                            академических часа, стоимость 17,5 долларов США по курсу продажи в
                             коммерческих банках РБ за один академический час 
-                            (30 долларов за занятие)
+                            (35 долларов за занятие)
                         </li>
                         <li>
                             <em>занятия в паре</em>, продолжительность 2 (90 минут)
-                            академических часа, стоимость 12,5 долларов США по курсу продажи 
-                            в коммерческих банках РБ за один академический час (25 долларов 
+                            академических часа, стоимость 15 долларов США по курсу продажи 
+                            в коммерческих банках РБ за один академический час (30 долларов 
                             за занятие)
                         </li>
                         <li>
                             <em>занятия в мини-группах</em>, продолжительность 2 
-                            (90 минут) академических часа, стоимость 10 долларов США 
+                            (90 минут) академических часа, стоимость от 11 до 12,5 долларов США 
                             по курсу продажи в коммерческих банках РБ за один академический 
-                            час (20 долларов за занятие). В группе от 3 до 7 человек.
+                            час (22,5 - 25 долларов за занятие)
+                        </li>
+						<li>
+                            для учеников, обучающихся за пределами РБ, цена индивидуального занятия может
+							быть выше на 2,5 - 5 долларов США по курсу продажи в коммерческих банках РБ за один академический 
+                            час
                         </li>
                     </ul>
                 </div>
