Изменены цены, внесены правки

--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -308,7 +308,7 @@
 							</li>
 							<li>
 								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
-								то ему предоставляется скидка в размере 5 долларов за каждое занятие по русскому языку.
+								то ему предоставляется <em>скидка в размере 5 долларов за каждое занятие по русскому языку</em>.
 							</li>
 						</ul>
 				</ol>
