--- a/math-5th-class.html
+++ b/math-5th-class.html
@@ -2,17 +2,18 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Репетитор по математике 5 класс, Минск
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Репетитор по математике 5 класс, Минск">
+		<meta name="keywords" content="Репетитор по математике 5 класс, Минск">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style-new.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -31,10 +32,10 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Репетитор по математике 5 класс, Минск</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				Репетитор 5 класс по математике в Минске, Беларусь<br>
+				Математика 5 класс, русский язык 5 класс, белорусский язык 5 класс
 			</span>
 			</div>
 			<div class="g3">
@@ -50,12 +51,12 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
@@ -69,28 +70,25 @@
 						<a class="blink" href="about.html">Информация о репетиторе</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 					</div>
 				</details>
 			</div>
 			<div class="fon">
 				<div class="foncall">
-					<img src="./images/advantages/mts.png"
-					 	alt="tech">
-						<a href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velcom.jpg"
-					 	alt="tech">
-						<a href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/vib.png"
-					 	alt="tech">
-						<a href="tel:+375172400021">+375(17)240-00-21</a>
-				</div><br>
+					<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+					<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
+				</div>
 				<div class="otz">
 					<span class="otz0">
 						<a href="otzivi.html">Отзывы о репетиторе >></a>
@@ -106,7 +104,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<em>https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</span>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -130,7 +128,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</span>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -157,7 +155,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</span>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -206,7 +204,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</span>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
@@ -239,6 +237,12 @@
 			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
 		</p>
 		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
 			<a class="imagelink" 
 				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
 				target="_blank">
@@ -255,12 +259,6 @@
 				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
 				target="_blank">
 				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-			</a>
-			<br>
-			<a class="imagelink" 
-				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-				target="_blank">
-				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
 			</a>
 		</p>
 	</div>
@@ -326,8 +324,8 @@
 		<div class="main">
 			<h2 class="main">
 				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
+					Репетитор по математике в Минске Игнатьев Игорь Викторович<br>
+					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи
 				</span>
 			</h2>
 
@@ -338,25 +336,90 @@
 			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">Репетитор по математике 5 класс, Минск</span>
 			</h2>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
+                    Переход от начальной школы ко 2-й ступени общего среднего образования нередко сложно дается ребенку.
+					 Причины разные: <em>повышение требований и уровня математики в 5-м классе</em>повышение требований и уровня математики в 5-м классе, переход от одного учителя к 
+					 учителям-предметникам, часто – завышенная оценка в 4-м классе. Также в этом классе олимпиады выходят 
+					 на новый уровень. 
 				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
 				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+                    По сути начальная школа является лишь <em>введением в математику</em>. С 5-го класса всё становится 
+					значительно серьёзнее. В начальной школе очень спокойный темп изучения предмета, много 
+					времени отводится для повторения изученного ранее материала, ребенок находится в 
+					комфортном для себя режиме. Система оценивания в начальной школе тоже максимально 
+					благоприятна для ученика. Т.к. обучение по всем предметам проводит один учитель, то 
+					нередко оценка превосходит уровень знаний.
+
+                </p>
+				<p class="zgt">
+                   В отличие от начальной школы, <em>в пятом классе темп изучения математики значительно 
+				   ускоряется</em>, изучается <em>много новых тем</em>, появляется учитель-предметник, который не делает 
+				   никаких поблажек, ибо учеников у него много, и зарабатывать свою оценку каждому нужно 
+				   своими <em>реальными знаниями</em>. Многим детям необходимо повторение и закрепление изученного 
+				   в начальной школе.
+
+                </p>
+				<p class="zgt">
+                    В пятом классе закладывается <em>фундамент для дальнейшего изучения математики</em>. Для сильных учеников это 
+					время развития логических способностей, введения в креативную математику и освоения методов решения 
+					олимпиадных задач.
+                </p>
+                <p class="zgt">
+                    <strong>Основные разделы:</strong>
+                </p>
+				<p class="zgt">
+                	<ol>
+                    	<li><em>Решение текстовых задач</em> на различные темы. Составление схем.</li>
+                    	<li><em>Решение уравнений</em> и решение задач с помощью уравнений.</li>
+                    	<li>Деление с остатком.</li>
+						<li>Делители числа. Задачи с использованием делителей числа.</li>
+						<li><em>Признаки делимости</em> на 2, 3, 4, 5, 6, 8, 9, 10 и другие.</li>
+						<li>Задачи, использующие четность и нечетность чисел.</li>
+						<li>Простые и составные числа. Взаимно простые числа.</li>
+						<li><em>НОД, НОК</em>, разложение числа на простые множители.</li>
+						<li>Понятие дроби. Обыкновенная дробь. Смешанная дробь. Перевод из одной формы в другую. 
+						Правильные и неправильные дроби.</li>
+						<li>Сложение и вычитание обыкновенных и смешанных дробей.</li>
+						<li>Умножение и деление обыкновенных и смешанных дробей.</li>
+						<li>Вычислительные примеры и уравнения, содержащие <em>все действия с дробями</em>.</li>
+                	</ol>
+				</p>
+				<p class="zgt">
+                    <strong>Разделы для изучения математики на углубленном уровне:</strong>
+                </p>
+				<p class="zgt">
+                	<ol>
+                    	<li>Арифметические ребусы.</li>
+                    	<li><em>Множества</em>. Операции с множествами. Круги Эйлера.</li>
+                    	<li>Сюжетные <em>логические задачи</em>.</li>
+						<li>Истинные и ложные высказывания. Лжецы, рыцари, дипломаты.</li>
+						<li>Переливания и взвешивания</li>
+						<li><em>Принцип Дирихле.</em></li>
+						<li>Простые <em>комбинаторные задачи</em>.</li>
+						<li>Раскраски, замощения и разрезания.</li>
+						<li><em>Игровые стратегии</em> и турниры.</li>
+						<li>Использование <em>остатков от деления</em> на натуральное число в олимпиадных задачах</li>
+                	</ol>
+				</p>
+                <p class="zgt">
+                    <a href="shkolnikam.html">Информация о ценах, условиях и формате занятий с репетитором по математике</a>.
+                </p>
+                <p class="zgt">
+                    <a href="russian-language-tutor.html">Информация о репетиторе по русскому и белорусскому языкам</a>.
+                </p>
+				<p class="zgt">
+                    <strong>Литература для занятий по математике в 5 классе:</strong>
+                </p>
+				<p class="zgt">
+                	<ul>
+                    	<li> Математика. 5 класс. Самостоятельные и контрольные работы. Валерий Герасимов</li>
+                    	<li>Сборник самостоятельных и контрольных работ по математике для 5 класса. Наталья Костюкович, О. Пирютко</li>
+                    	<li> Дополнительные учебные материалы и олимпиадные задания предоставляю я</li>
+                	</ul>
 				</p>
 			</div>
 		<div class="clear"></div>
@@ -370,36 +433,36 @@
 		</span>
 	</div>	
 	<div class="right1">
-		<div class="portal-raitings">
-			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
-				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
-			</p>
-			<p>
-				<a class="imagelink" 
-					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
-				</a>
-			</p>
-		</div>
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+		</p>
+	</div>
 	</div>
 		
 	<div class="no">
@@ -417,7 +480,7 @@
 			</div>
 			<div class="glf2">
 				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
