Правки по ценам и опечаткам

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 				Считаю основным создание у ученика 
 				<em>фундаментальной математической базы</em>, 
 				соответствующей его классу, уровню, 
-				математическим способностям и дальнейшее ее развития. Учу находить взаимосвязь между различными главами 
+				математическим способностям и дальнейшее ее развитие. Учу находить взаимосвязь между различными главами 
 				и разделами математики. Особое внимание уделяю изучению новых тем, зачастую работаю на опережение. 
 				При этом считаю чрезвычайно важным добиться у ученика понимания предмета в полном объеме, а не в рамках последних тем.
 				Всегда выхожу за пределы программы учебника, предмет изучается на более глубоком уровне. При этом обязательно учитываются
@@ -447,7 +447,7 @@
 					<em>репетитор по алгебре и геометрии </em>
 					для восстановления основ школьной программы,
 				необходима подготовка по линейной алгебре, аналитической геометрии, математическому анализу, дифференциальным уравнениям, теории 
-				вероятностей и математической статистики, математическому программированию, 
+				вероятностей и математической статистике, математическому программированию, 
 				с последующим выходом на дисциплины специализации.
 				</span>
                 <br>
