--- a/metodika_prepodavania.html
+++ b/metodika_prepodavania.html
@@ -424,7 +424,7 @@
 				<p class="zgt">
 					- <em>занятия в мини-группах</em>, продолжительность 3 (135 минут) академических часа,
 					стоимость 10,5 - 12,5 долларов США по курсу продажи в коммерческих банках РБ за один
-					академический час (32,5 - 37,5 долларов за занятие). В группе от 3 до 7 человек  
+					академический час (32,5 - 37,5 долларов за занятие). 
 				</p>
 				<p class="zgt">
 					Стабильно отличные и хорошие результаты достигаются при любом виде занятий,
@@ -445,18 +445,18 @@
 				</p>
 				<p class="zgt">
 					- <em>индивидуальные занятия</em>, продолжительность 2 (90 минут) академических часа,
-					стоимость 15 долларов США по курсу продажи в коммерческих банках РБ
-					за один академический час (30 долларов за занятие).
+					стоимость 17,5 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (35 долларов за занятие).
 				</p>
 				<p class="zgt">
 					- <em>занятия в паре</em>, продолжительность 2 (90 минут) академических часа, стоимость
-					12,5 долларов США по курсу продажи в коммерческих банках РБ за один
-					академический час (25 долларов за занятие) 
+					15 долларов США по курсу продажи в коммерческих банках РБ за один
+					академический час (30 долларов за занятие) 
 				</p>
 				<p class="zgt">
 					- <em>занятия в мини-группах</em>, продолжительность 2 (90 минут) академических часа,
-					стоимость 10 долларов США по курсу продажи в коммерческих банках РБ
-					за один академический час (20 долларов за занятие)
+					стоимость от 11 до 12,5 долларов долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (20-25 долларов за занятие)
 				</p>
 		</div></li>
 			</ol>
