Изменения по пятому классу. Добавлены картинки

--- a/math-5th-class.html
+++ b/math-5th-class.html
@@ -338,7 +338,16 @@
 			<h2 class="main"> 
 				<span class="h21">Репетитор по математике 5 класс, Минск</span>
 			</h2>
-
+			<div class="ck"> 
+				<img alt="Репетитор по математике пятый класс в Минске"
+					class="image1"  
+					src="images/photo/math-5th-class-1.jpg" 
+					title="Репетитор по математике 5 класс в Минске">
+				<img alt="Репетитор по математике пятый класс Минск"
+					class="image" 
+					src="images/photo/math-5th-class-2.jpg" 
+					title="Репетитор по математике 5 класс Минск">
+			</div>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
                     Переход от начальной школы ко 2-й ступени общего среднего образования нередко сложно дается ребенку.
