--- a/mathematics-for-professionals.html
+++ b/mathematics-for-professionals.html
@@ -345,16 +345,16 @@
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					Нередко взрослые люди, имеющие высшее образование, востребованную специальность и хороший заработок, осознают, что недостаточная математическая база мешает их дальнейшему росту в профессии и, как следствие, росту благосостояния.
+					Нередко взрослые люди, имеющие высшее образование, востребованную специальность и хороший заработок, осознают, что недостаточная <em>математическая база</em> мешает их дальнейшему росту в профессии и, как следствие, росту благосостояния.
 				</p>
 				<p class="zgt">
-					Так как математика играет важную роль в работе IT- специалистов и имеет несколько ключевых применений, то и наибольшая потребность в углубленном изучении математики возникает у работников IT-индустрии, но не только у них.
+					Так как <em>математика</em> играет важную роль в работе <em>IT- специалистов</em> и имеет несколько ключевых применений, то и наибольшая потребность в углубленном изучении математики возникает у работников IT-индустрии, но не только у них.
 				</p>
 				<p class="zgt">
 					В первую очередь я бы посоветовал определиться, с чего вы желаете начать, так как общего рецепта здесь нет.
 				</p>
 				<p class="zgt">
-					Возможно, начать нужно с освоения школьной программы на повышенном или углубленном уровне, затем досконально усвоить курс высшей математики, уделив особое внимание наиболее востребованным главам.
+					Возможно, начать нужно с освоения школьной программы на повышенном или углубленном уровне, затем досконально усвоить <em>курс высшей математики</em>, уделив особое внимание <em>наиболее востребованным главам</em>.
 				</p>
 				<p class="zgt">
 					Можно начинать и с высшей математики, а кому-то необходимы только отдельные дисциплины:
@@ -367,64 +367,64 @@
 				</ul>
 
 				<p class="zgt">
-					Общее понимание предмета и умение применять математические принципы помогает IT-специалистам решать сложные задачи, разрабатывать новые технологии и эффективно работать с данными.
+					Общее понимание предмета и умение применять <em>математические принципы</em> помогает IT-специалистам решать сложные задачи, разрабатывать новые технологии и эффективно работать с данными.
 				</p>
 
 				<p class="zgt">
-					В современном мире данные стали одним из самых ценных активов. Математические методы и статистика позволяют IT-специалистам анализировать и обрабатывать большие объемы данных, выявлять тенденции и закономерности, а также строить предиктивные модели для прогнозирования и принятия решений.
+					В современном мире данные стали одним из самых ценных активов. <em>Математические методы и статистика</em> позволяют <em>IT-специалистам</em> анализировать и обрабатывать большие объемы данных, выявлять тенденции и закономерности, а также строить предиктивные модели для прогнозирования и принятия решений.
 				</p>
 				<p class="zgt">
-					Математика способствует развитию абстрактного и логического мышления. Эти навыки не только полезны для IT-специалистов при разработке программного обеспечения, но и в повседневной работе, где требуется аналитическое мышление и поиск рациональных решений.
+					<em>Математика</em> способствует развитию абстрактного и логического мышления. Эти навыки не только полезны для IT-специалистов при разработке программного обеспечения, но и в повседневной работе, где требуется <em>аналитическое мышление и поиск рациональных решений</em>.
 				</p>
 				<p class="zgt">
-					Таким образом, математика является фундаментальным инструментом для IT-специалистов и позволяет им разрабатывать эффективные алгоритмы, обеспечивать безопасность данных, создавать интеллектуальные системы, работать с графикой и анализировать данные. Понимание математических концепций помогает IT-специалистам решать сложные задачи и быть более эффективными в своей работе, а также открывает возможности для творчества и инноваций в области информационных технологий.
+					Таким образом, математика является фундаментальным инструментом для <em>IT-специалистов</em> и позволяет им разрабатывать эффективные алгоритмы, обеспечивать безопасность данных, создавать интеллектуальные системы, работать с графикой и анализировать данные. Понимание <em>математических концепций</em> помогает IT-специалистам решать сложные задачи и быть более эффективными в своей работе, а также открывает возможности для творчества и инноваций в области информационных технологий.
 				</p>
 
 				<h3>Цены на занятия по математике для взрослых:</h3>
 				<ul>
-					<li>стоимость индивидуальных занятий - 22,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 45 условных единиц.</li>
+					<li>стоимость <em>индивидуальных занятий</em> - 22,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная <em>продолжительность - 2 академических часа (90 минут)</em>. Стоимость занятия в этом случае составит 45 условных единиц.</li>
 					<li>стоимость занятий в паре - 20 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 40 условных единиц.</li>
 					<li>стоимость занятий в мини-группах - 17,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 35 условных единиц. В группе может быть от трёх до четырёх человек.</li>
 				</ul>
 				<p class="zgt">
-					Отмечу, что в силу различных поставленных целей и задач, начального уровня знаний, времени начала подготовки по математике, занятия часто проходят в индивидуальном формате.
+					Отмечу, что в силу различных поставленных целей и задач, начального уровня знаний, времени начала подготовки по математике, занятия часто проходят в <em>индивидуальном формате</em>.
 				</p>
 				<p class="zgt">
 					Указанные расценки актуальны при изучении достаточного объема материала и при проведении занятий на территории преподавателя. При прохождении отдельных тем или занятиях в онлайн-формате стоимость увеличивается на 5 у.е. за занятие. Выезд репетитора на дом исключён.
 				</p>
 				<p class="zgt">
-					Цены на консультации (одно или несколько занятий) стоит уточнить у репетитора по математике.
+					Цены на <em>консультации</em> (одно или несколько занятий) стоит уточнить у репетитора по математике.
 				</p>
 
 				<h3>
-					Искусственный интеллект и машинное обучение
+					<strong>Искусственный интеллект и машинное обучение</strong>
 				</h3>
 				<p class="zgt">
-					Математика является основой для различных алгоритмов машинного обучения и искусственного интеллекта. Разработка моделей машинного обучения требует знания таких математических дисциплин, как линейная алгебра, математический анализ, теория вероятностей и математическая статистика.
+					<em>Математика</em> является <em>основой</em> для различных алгоритмов <em>машинного обучения и искусственного интеллекта</em>. Разработка моделей машинного обучения требует знания таких математических дисциплин, как <em>линейная алгебра, математический анализ, теория вероятностей и математическая статистика</em>.
 				</p>
 				<p class="zgt">
 					Полученные математические навыки помогут IT-специалистам разрабатывать и настраивать алгоритмы машинного обучения, которые могут обрабатывать данные, выявлять паттерны и делать прогнозы.
 				</p>
 				<p class="zgt">
-					Математические методы необходимы для анализа данных, классификации, кластеризации и прогнозирования.
+					<em>Математические методы</em> необходимы для анализа данных, классификации, кластеризации и прогнозирования.
 				</p>
 
 				<h3>
-					Анализ данных и оптимизация
+					<strong>Анализ данных и оптимизация</strong>
 				</h3>
 				<p class="zgt">
 					В IT сфере часто возникает потребность в анализе больших объемов данных.
 				</p>
 				<p class="zgt">
-					Математические методы, теория вероятностей и математическая статистика используются для обработки и интерпретации данных, выявления закономерностей, создания моделей и прогнозирования результатов. Они позволяют оптимизировать производительность программы, решать задачи линейного и нелинейного программирования, а также проводить статистический анализ данных.
+					<em>Математические методы, теория вероятностей и математическая статистика</em> используются для обработки и интерпретации данных, выявления закономерностей, создания моделей и прогнозирования результатов. Они позволяют оптимизировать производительность программы, решать задачи <em>линейного и нелинейного программирования</em>, а также проводить <em>статистический анализ данных</em>.
 				</p>
 
 				<h3>
-					Разработка графических интерфейсов и игр
+					<strong>Разработка графических интерфейсов и игр</strong>
 				</h3>
 
 				<p class="zgt">
-					Визуальные эффекты, 3D моделирование, физические симуляции - все это требует знания таких разделов математики, как планиметрия, стереометрия, векторы, аналитическая геометрия, тригонометрия и линейная алгебра.Они помогают в работе с трехмерными объектами, преобразованиями координат, в создании впечатляющих визуальных эффектов.
+					Визуальные эффекты, 3D моделирование, физические симуляции - все это требует знания таких разделов математики, как <em>планиметрия, стереометрия, векторы, аналитическая геометрия, тригонометрия и линейная алгебра</em>.Они помогают в работе с <em>трехмерными объектами</em>, <em>преобразованиями координат</em>, в создании впечатляющих визуальных эффектов.
 				</p>
 			</div>
 		<div class="clear"></div>
