M-182. Добавлены картинки и исправлена опечатка на странице пятого класса

--- a/math-5th-class.html
+++ b/math-5th-class.html
@@ -338,11 +338,21 @@
 			<h2 class="main"> 
 				<span class="h21">Репетитор по математике 5 класс, Минск</span>
 			</h2>
+			<div class="ck"> 
+				<img alt="Репетитор по математике пятый класс в Минске"
+					class="image1"  
+					src="images/photo/form5-1.jpg" 
+					title="Репетитор по математике пятый класс в Минске">
+				<img alt="Репетитор по математике 5 класс, Минск"
+					class="image" 
+					src="images/photo/form5-2.jpg" 
+					title="Репетитор по математике 5 класс, Минск">
+			</div>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
                     Переход от начальной школы ко 2-й ступени общего среднего образования нередко сложно дается ребенку.
-					 Причины разные: <em>повышение требований и уровня математики в 5-м классе</em>повышение требований и уровня математики в 5-м классе, переход от одного учителя к 
+					 Причины разные: <em>повышение требований и уровня математики в 5-м классе</em>, переход от одного учителя к 
 					 учителям-предметникам, часто – завышенная оценка в 4-м классе. Также в этом классе олимпиады выходят 
 					 на новый уровень. 
 				</p>
