M 229. Place two additional videos on the main page. (#237)
* На странице отзывов изменено второе видео и ссылка первого. На странице about изменена первая фотография на ролик.
* Изменена фото-ссылка на ролик

--- a/otzivi.html
+++ b/otzivi.html
@@ -434,16 +434,16 @@
 репетиторы <span class="fotk"><img src="./images/advantages/smile.png" style="vertical-align: middle;"></span> уже другие, не те, что на прошлом сайте. Вопрос «как найти хорошего репетитора?» всегда 
 актуален.	</div>
 			<div class="ck"> 
-				<a href="https://www.youtube.com/watch?v=EYH5g5kS_xg" target="_blank">
+				<a href="https://youtu.be/xqf0GIf-2o8" target="_blank">
 					<img alt="Репетитор по математике в Минске"
 						class="image1"  
-						src="images/photo/results-2023.jpg" 
+						src="images/photo/results-100.jpg" 
 						title="Репетитор по математике в Минске"></a>
 				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
-				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
+				<a href="https://youtu.be/xBUEgU2VSQk" target="_blank">
 					<img alt="Занятия по математике в группах"
 						class="image" 
-						src="images/photo/results-2018.jpg" 
+						src="images/photo/results-2025.jpg" 
 						title="Занятия по математике в группах">
 				</a>
 			</div>
