M-174. Разметка в strong и em

--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -173,12 +173,12 @@
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					Игнатьева Марина Михайловна в 1998 году закончила школу в г. Минске с золотой медалью и поступила в БГПУ им. М. Танка.
+					Игнатьева Марина Михайловна в 1998 году закончила школу в г. Минске с <em>золотой медалью</em> и поступила в БГПУ им. М. Танка.
 				</p>
 
 				<p class="zgt">
-					В 2003 году окончила Белорусский государственный педагогический университет им. М. Танка с красным дипломом. 
-					Ей была присвоена квалификация “преподаватель русского языка и литературы, преподаватель белорусского языка и литературы”.
+					В 2003 году окончила Белорусский государственный педагогический университет им. М. Танка с <em>красным дипломом</em>. 
+					Ей была присвоена квалификация <em>“преподаватель русского языка и литературы, преподаватель белорусского языка и литературы”</em>.
 				</p>
 
 				<p class="zgt">
@@ -194,20 +194,20 @@
 
 
 				<p class="zgt">
-					На данный момент Марина Михайловна – учитель высшей категории и высокопрофессиональный репетитор по русскому языку в Минске. 
+					На данный момент Марина Михайловна – учитель высшей категории и <strong>высокопрофессиональный репетитор по русскому языку в Минске</strong>. 
 					Ученики, занимающиеся у нее, неуклонно повышают свой уровень знаний и успеваемость. 
-					Её способные ученики, выполняющие заданный объём работы, стабильно набирают больше 90 баллов на ЦТ и ЦЭ по русскому языку. 
+					<strong>Её способные ученики, выполняющие заданный объём работы, стабильно набирают больше 90 баллов на ЦТ и ЦЭ по русскому языку</strong>. 
 					Достигались и результаты в 100 баллов.
 				</p>
 				
 				<p class="zgt">
-					За долгий период преподавания учителем создана обширная база учебных материалов по русскому языку,
-					 авторских наработок и разнообразных вариантов ЦТ и ЦЭ по русскому языку.
+					За долгий период преподавания <em>учителем</em> создана обширная база учебных материалов по русскому языку,
+					 <em>авторских наработок</em> и разнообразных вариантов <em>ЦТ и ЦЭ по русскому языку</em>.
 				</p>				
 
 
 				<p class="zgt">
-					Методика преподавания русского языка включает себя подробный и доступный разбор по темам:
+					<em>Методика преподавания русского языка</em> включает себя подробный и <em>доступный разбор по темам</em>:
 				</p>
 
 				<ul>
@@ -231,8 +231,8 @@
 					Воспитание и развитие собственных детей, а также другие семейные заботы занимают немало времени, 
 					поэтому много учеников Марина Михайловна взять не может. 
 					Обычно это ученики репетитора по математике Игнатьева Игоря Викторовича, 
-					которые пользуются опцией “Репетитор по математике и репетитор по русскому языку в одной семье” 
-					и при определённых условиях имеют скидку на занятия по русскому языку. 
+					которые пользуются опцией <em>“Репетитор по математике и репетитор по русскому языку в одной семье” </em>
+					и при определённых условиях имеют скидку на <em>занятия по русскому языку</em>. 
 					Однако периодически возникает возможность взять нескольких учеников без привязки к математике. 
 					Информацию о наличии свободных мест стоит уточнить у преподавателя.
 				</p>
@@ -261,12 +261,12 @@
 						Формат занятий определяет учитель.
 					</li>
 					<li>
-						Периодичность занятий – 1 или 2 раза в неделю.
+						<em>Периодичность занятий</em> – 1 или 2 раза в неделю.
 					</li>
 				</ul>
 
 				<h3>
-					Предоставляемые услуги и цены. Стоимость занятий по русскому и белорусскому языкам:
+					Предоставляемые <em>услуги и цены</em>. Стоимость занятий по русскому и белорусскому языкам:
 				</h3>
 
 				<ol>
